force-app/main/default/objects/sugati__Introduction_Image__c/sugati__Introduction_Image__c.object-meta.xml
<CustomObject>
    <label>Introduction Image</label>
    <nameField>
        <displayFormat>IIN-{0000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Introduction Images</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>