force-app/main/default/objects/sugati__Introduction_Image__c/fields/sugati__II_Attachement_Id__c.field-meta.xml
<CustomField>
    <fullName>sugati__II_Attachement_Id__c</fullName>
    <label>Attachement Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>