force-app/main/default/objects/sugati__Introduction_Image__c/fields/sugati__II_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__II_Image__c</fullName>
    <formula>IMAGE(&apos;/servlet/servlet.FileDownload?file=&apos;&amp; sugati__II_Attachement_Id__c , &apos; &apos;,70,100)</formula>
    <label>Image</label>
    <type>Text</type>
</CustomField>