force-app/main/default/objects/sugati__Introduction_Image__c/fields/sugati__II_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>sugati__II_Opportunity__c</fullName>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Introduction Images</relationshipLabel>
    <relationshipName>Introduction_Images</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>