force-app/main/default/objects/sugati__Introduction_Image__c/fields/sugati__II_Selected_Content_Category__c.field-meta.xml
<CustomField>
    <fullName>sugati__II_Selected_Content_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Selected Content Category</label>
    <referenceTo>sugati__Selected_Itinerary_Content_Category__c</referenceTo>
    <relationshipLabel>Introduction Images</relationshipLabel>
    <relationshipName>Introduction_Images</relationshipName>
    <type>Lookup</type>
</CustomField>